Fixed font size allocation for html views on iOS

--- a/Forms.iOS/Resources/Html/accountsTable.css
+++ b/Forms.iOS/Resources/Html/accountsTable.css
@@ -1,111 +1,114 @@
 @font-face {
-    font-family: "DroidSansMono";
-    src: url('DroidSansMono.ttf') format('truetype');
+  font-family: "DroidSansMono";
+  src: url('DroidSansMono.ttf') format('truetype');
 }
 
 html, body {
-    font-family: "DroidSansMono", "Courier New", Consolas, monospace;
-    font-weight: lighter;
-    margin: 0;
-    -webkit-touch-callout: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  font-family: "DroidSansMono", "Courier New", Consolas, monospace;
+  font-weight: lighter;
+  margin: 0;
+  -webkit-text-size-adjust: none;
+  -webkit-touch-callout: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-    body > div {
-        position: fixed;
-        width: 100%;
-        overflow-x: auto;
-    }
+body>div {
+  position: fixed;
+  width: 100%;
+  overflow-x: auto;
+}
 
 table {
-    width: 100%;
-    border-collapse: collapse;
+  width: 100%;
+  border-collapse: collapse;
 }
 
 td:first-child {
-    padding-left: 15px;
+  padding-left: 15px;
 }
 
-    td:first-child > div {
-        position: relative;
-        overflow: hidden;
-        height: 1.33em;
-    }
+td:first-child>div {
+  position: relative;
+  overflow: hidden;
+  height: 1.33em;
+}
 
-        /* visible content */
-        td:first-child > div > span {
-            display: block;
-            position: absolute;
-            max-width: 100%;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            line-height: 1.33em;
-        }
 
-    td:first-child + td, td:first-child + td + td {
-        text-align: right;
-    }
+/* visible content */
+
+td:first-child>div>span {
+  display: block;
+  position: absolute;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1.33em;
+}
+
+td:first-child+td, td:first-child+td+td {
+  text-align: right;
+}
 
 th:last-child, td:last-child {
-    width: 30px;
+  width: 30px;
 }
 
 tbody td:not(:first-child) span:last-child {
-    font-size: 9pt;
+  font-size: 9pt;
 }
 
 tbody td:last-child {
-    background-image: url('more.png');
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 20px;
+  background-image: url('more.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 20px;
 }
 
 td {
-    white-space: nowrap;
-    text-align: left;
-    padding: 8px 4px;
-    cursor: pointer;
+  white-space: nowrap;
+  text-align: left;
+  padding: 8px 4px;
+  cursor: pointer;
 }
 
 tr:first-child {
-    border-top: 1px solid #ccc;
+  border-top: 1px solid #ccc;
 }
 
 tr {
-    border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
 }
 
 thead tr {
-    background-color: #eee;
+  background-color: #eee;
 }
 
 thead td {
-    border-right: 1px solid lightgray;
-    padding-right: 0.35em;
+  border-right: 1px solid lightgray;
+  padding-right: 0.35em;
 }
 
-    thead td span {
-        display: block;
-        background-image: url("upDown.svg");
-        background-repeat: no-repeat;
-        background-position: right center;
-        background-size: auto 1em;
-        padding-right: 1.25em;
-    }
+thead td span {
+  display: block;
+  background-image: url("upDown.svg");
+  background-repeat: no-repeat;
+  background-position: right center;
+  background-size: auto 1em;
+  padding-right: 1.25em;
+}
 
 thead .down span {
-    background-image: url("up.svg");
+  background-image: url("up.svg");
 }
 
 thead .up span {
-    background-image: url("down.svg");
+  background-image: url("down.svg");
 }
 
 .disabled {
-    color: #aaa;
+  color: #aaa;
 }
